--- a/index.html
+++ b/index.html
@@ -22,30 +22,16 @@
                 <div class="col-12">
                     <div class="topSection">
                         <h1>What are your phobias?</h1>
-                        <input type="text" id="phobia"/>
+                        <input type="text" id="userPhobia"/>
                         <button class="enterPhobiaButton" onclick="enterPhobiaInput()">Add Phobia</button>
 
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-12">
-                    Image to analyze: <input type="text" name="inputImage" id="inputImage" value="http://upload.wikimedia.org/wikipedia/commons/3/3c/Shaki_waterfall.jpg" />
-                    <button onclick="processImage()">Analyze image</button>
-                    <br><br>
-                    <div id="wrapper" style="width:1020px; display:table;">
-                    <div id="jsonOutput" style="width:600px; display:table-cell;">
-                        Response:
-                        <br><br>
-                    <textarea id="responseTextArea" class="UIInput" style="width:580px; height:400px;"></textarea>
-                </div>
-                            <div id="imageDiv" style="width:420px; display:table-cell;">
-                Source image:
-                <br><br>
-                <img id="sourceImage" width="400" />
-    </div>
-</div>
-
+           <div class="row">
+               <div class="col-12">
+                   <ol id="userPhobiaList">
+                   </ol>
                 </div>
             </div>
         </div>
