idk what i changed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <title>
             Phobia Sensor
         </title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="default.css">
         <script src="script.js"></script>
@@ -21,10 +20,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="topSection">
-                        <h1>What are your phobias?</h1>
+                        <p>What are your phobias?</p>
                         <input type="text" id="userPhobia"/>
                         <button class="enterPhobiaButton" onclick="enterPhobiaInput()">Add Phobia</button>
-                        <img src="" id="sourceImage" />
                     </div>
                 </div>
             </div>
