Added full functionality to script

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                         <p>What are your phobias?</p>
                         <input type="text" id="userPhobia"/>
                         <button class="enterPhobiaButton" onclick="enterPhobiaInput()">Add Phobia</button>
+                        <img src="" id="sourceImage" />
                     </div>
                 </div>
             </div>
