--- a/index.html
+++ b/index.html
@@ -13,25 +13,22 @@
         </title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="default.css">
-        <script src="script.js"></script>
     </head>
     
     <body>
-        <div class="container">
+        <div class="bgimage">
+        </div>
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <div class="topSection">
-                        <p>What are your phobias?</p>
-                        <input type="text" id="userPhobia"/>
-                        <button class="enterPhobiaButton" onclick="enterPhobiaInput()">Add Phobia</button>
-                        <img src="" id="sourceImage" />
-                    </div>
+                    <img class="downArrow" src="assets/arrowDown.png">
                 </div>
             </div>
+        </div>
+
+        <div class="container">
            <div class="row">
-               <div class="col-12">
-                   <ol id="userPhobiaList">
-                   </ol>
+                <div class="col-12">
                 </div>
             </div>
         </div>
