--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="default.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet"> 
     </head>
     
     <body>
@@ -34,7 +35,7 @@
             </div>
             <div class="row">
                 <div class="col-8 ml-auto">
-                    <div class="about">
+                    <div class="about quote">
                         -National Institute of Mental Health
                     </div>
                 </div>
@@ -42,14 +43,44 @@
             <div class="row">
                 <div class="col-5 ml-auto">
                     <div class="about description">
-                        <h2>What is Phobia Censor?</h2>
+                        <h1>What is Phobia Censor?</h1>
                         The Phobia Censor is a chrome extension that checks every single image that is displayed on your screen and utilizes Microsoft's Computer Vision API - v1.0 to determine if the image triggers a user's phobia. For example, a person that has an extreme fear of spiders (arachnophobia), would set up a profile listing their fear and Phobia Censor will "censor" every image containing spiders.
                     </div>
                 </div>
-                <div class="col-5 ml-auto">
-                    <div class="about description">
-                        <h2>How does it work?</h2>
+                <div class="col-5 mr-auto">
+                    <div class="about description borderl">
+                        <h1>How does it work?</h1>
                         The Phobia Censor parses the HTML document for all image tags and then uses the Microsoft Computer Vision API to determine a list of tags for the images. It then cross checks those tags with the user's list of phobias and blocks out all of the content that may resemble the phobia and thus makes internet browsing safe for all!
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-10 ml-auto mr-auto">
+                    <div class="github">
+                        Find the project on Github at:
+                        <a href="https://github.com/drinkWaterToQuenchThirst/DubhacksProject"> DubHacks 2017 </a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2 ml-auto">
+                    <div class="names">
+                        Ryan Yang
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="names">
+                        Jeff Jing
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="names">
+                        William Kwok
+                    </div>
+                </div>
+                <div class="col-2 mr-auto">
+                    <div class="names">
+                        Nathaniel Wichman
                     </div>
                 </div>
             </div>
