deleted extra files

--- a/FearFilterWebsite/index.html
+++ b/FearFilterWebsite/index.html
@@ -29,7 +29,7 @@
             <div class="row">
                 <div class="col-10 ml-auto mr-auto">
                     <div class="about">
-                        "Nearly 15-20% of us experience specific phobias at least once in our life. In the U.S., nearly 8.7% of people (aged 18 and over) have at least one extreme specific fear."
+                        "Up to 20% of the human population experience specific phobias at least once in our life. In the U.S., nearly 9% of adults have at least one extreme specific fear."
                     </div>
                 </div>
             </div>
@@ -41,46 +41,67 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-5 ml-auto">
+                <div class="col-12 col-md-5 ml-auto">
                     <div class="about description">
                         <h1>What is Phobia Censor?</h1>
                         The Phobia Censor is a chrome extension that checks every single image that is displayed on your screen and utilizes Microsoft's Computer Vision API - v1.0 to determine if the image triggers a user's phobia. For example, a person that has an extreme fear of spiders (arachnophobia), would set up a profile listing their fear and Phobia Censor will "censor" every image containing spiders.
                     </div>
                 </div>
-                <div class="col-5 mr-auto">
+                <div class="col-12 col-md-5 mr-auto">
                     <div class="about description borderl">
                         <h1>How does it work?</h1>
-                        The Phobia Censor parses the HTML document for all image tags and then uses the Microsoft Computer Vision API to determine a list of tags for the images. It then cross checks those tags with the user's list of phobias and blocks out all of the content that may resemble the phobia and thus makes internet browsing safe for all!
+                        The Phobia Censor parses every visited website's HTML code for all image tags and then utilizes Microsoft's Computer Vision API to determine a list of tags for the images. It then cross checks those tags with the user's list of phobias and blocks out all of the content that may resemble the phobia. The blocked image will be replaced with a description of why the image was blocked and have a button to allow the user to view the content anyways.
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-10 ml-auto mr-auto">
-                    <div class="github">
-                        Find the project on Github at:
-                        <a href="https://github.com/drinkWaterToQuenchThirst/DubhacksProject"> DubHacks 2017 </a>
+                <div class="col-12">
+                    <div class="teamDescriptions">
+                        <h2>Meet the team: </h2>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-2 ml-auto">
+                <div class="col-md-2 col-12 ml-md-auto">
                     <div class="names">
                         Ryan Yang
+                        <br>
+                        <a href = "https://github.com/drinkWaterToQuenchThirst">Github</a>
                     </div>
                 </div>
-                <div class="col-2">
+                <div class="col-md-2 col-12">
                     <div class="names">
                         Jeff Jing
+                        <br>
+                        <a href = "https://github.com/">Github</a>
                     </div>
                 </div>
-                <div class="col-2">
+                <div class="col-md-2 col-12">
                     <div class="names">
                         William Kwok
+                        <br>
+                        <a href = "https://github.com/">Github</a>
                     </div>
                 </div>
-                <div class="col-2 mr-auto">
+                <div class="col-md-2 col-12 mr-md-auto">
                     <div class="names">
                         Nathaniel Wichman
+                        <br>
+                        <a href = "https://github.com/">Github</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="github">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6 col-12 mr-auto ml-auto">
+                            Find the project on Github at:
+                            <a href="https://github.com/drinkWaterToQuenchThirst/DubhacksProject"> Fear Filter </a>
+                        <br>
+                            On DevPost:
+                            <a href="https://devpost.com/software/fear-filter">Fear Filter
+                            </a>
                     </div>
                 </div>
             </div>
