updated website to link to our profiles

--- a/FearFilterWebsite/index.html
+++ b/FearFilterWebsite/index.html
@@ -9,7 +9,7 @@
 <html lang="en-US">
     <head>
         <title>
-            Phobia Censor
+            Fear Filter: Phobia Censor
         </title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
@@ -43,14 +43,14 @@
             <div class="row">
                 <div class="col-12 col-md-5 ml-auto">
                     <div class="about description">
-                        <h1>What is Phobia Censor?</h1>
-                        The Phobia Censor is a chrome extension that checks every single image that is displayed on your screen and utilizes Microsoft's Computer Vision API - v1.0 to determine if the image triggers a user's phobia. For example, a person that has an extreme fear of spiders (arachnophobia), would set up a profile listing their fear and Phobia Censor will "censor" every image containing spiders.
+                        <h1>What is Fear Filter?</h1>
+                        Fear Filter is a chrome extension that checks every single image that is displayed on your screen and utilizes Microsoft's Computer Vision API - v1.0 to determine if the image triggers a user's phobia. For example, a person that has an extreme fear of spiders (arachnophobia), would set up a profile listing their fear and Fear Filter will "censor" every image containing spiders.
                     </div>
                 </div>
                 <div class="col-12 col-md-5 mr-auto">
                     <div class="about description borderl">
                         <h1>How does it work?</h1>
-                        The Phobia Censor parses every visited website's HTML code for all image tags and then utilizes Microsoft's Computer Vision API to determine a list of tags for the images. It then cross checks those tags with the user's list of phobias and blocks out all of the content that may resemble the phobia. The blocked image will be replaced with a description of why the image was blocked and have a button to allow the user to view the content anyways.
+                        Fear Filter parses every visited website's HTML code for all image tags and then utilizes Microsoft's Computer Vision API to determine a list of tags for the images. It then cross checks those tags with the user's list of phobias and blocks out all of the content that may resemble the phobia. The blocked image will be replaced with a description of why the image was blocked and have a button to allow the user to view the content anyways.
                     </div>
                 </div>
             </div>
@@ -62,32 +62,40 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2 col-12 ml-md-auto">
+                <div class="col-lg-3 col-12 ml-lg-auto">
                     <div class="names">
+                        <img class="nameImage" src="assets/profilepicture.png"><br>
                         Ryan Yang
                         <br>
                         <a href = "https://github.com/drinkWaterToQuenchThirst">Github</a>
+                        <p>"Designed the website as well as many other front end/design concepts. In addition, I organized the roles as well as adding many various functions to the JS"</p>
                     </div>
                 </div>
-                <div class="col-md-2 col-12">
+                <div class="col-lg-3 col-12">
                     <div class="names">
+                        <img class="nameImage" src="assets/profilepictureJeff.png"><br>
                         Jeff Jing
                         <br>
-                        <a href = "https://github.com/">Github</a>
+                        <a href = "https://github.com/JeffreyJing">Github</a>
                     </div>
                 </div>
-                <div class="col-md-2 col-12">
+                <div class="col-lg-3 col-12">
                     <div class="names">
+                        <img class="nameImage" src="assets/profilePictureWill.png"><br>
                         William Kwok
                         <br>
-                        <a href = "https://github.com/">Github</a>
+                        <a href = "https://github.com/mockingod">Github</a>
+                        <p>"I worked on the javascript functionality for parsing the JSON the API returned and ensuring the correct images got blocked out."
+                        </p>
                     </div>
                 </div>
-                <div class="col-md-2 col-12 mr-md-auto">
+                <div class="col-lg-3 col-12 mr-lg-auto">
                     <div class="names">
+                        <img class="nameImage" src="assets/profilepictureNate.png"><br>
                         Nathaniel Wichman
                         <br>
-                        <a href = "https://github.com/">Github</a>
+                        <a href = "https://devpost.com/NathanielWichman">DevPost</a>
+                        <p>"I worked on moving our JavaScript code into a Chrome Extension, as well as dealing with data storage and UI."</p>
                     </div>
                 </div>
             </div>
